@@ -13,7 +13,20 @@
 #' @examples
 #' mtcars[with(mtcars, order(cyl, disp)), ]
 #' arrange(mtcars, cyl, disp)
+#' arrange(mtcars, cyl, desc(disp))
 arrange <- function(df, ...) {
   ord <- eval(substitute(order(...)), df, parent.frame())
   df[ord, ]
 }
+
+#' Descending order
+#'
+#' Transform a vector into a format that will be sorted in descending order.
+#'
+#' @param x vector to transform
+#' @keywords internal
+#' desc(1:10)
+#' desc(factor(letters))
+#' first_day <- seq(as.Date("1910/1/1"), as.Date("1920/1/1"), "years")
+#' desc(first_day)
+desc <- function(x) -xtfrm(x)
